update with footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
     <button id="restart-btn">Restart</button>
   </div>
-
+  <footer class="footer">
+  <p>Made with ❤️ for keyboard slammers. © 2025 TypeMaster | <a
+      href="https://rookiedev25.github.io/my-portfolio/">rookieDev25</a></p>
+</footer>
   <script src="script.js"></script>
 </body>
 
